Az első index.html fájlom

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Balla Milán</title>
-</head>
-<body>
-
-<h1>Balla Milán</h1>
-
-<img src="https://raw.githubusercontent.com/Ballam906/kollazs/main/koll%C3%A1zs.jpg" alt="Kollazs">
-
-</body>
+	<head>
+		<title>BM oldala</title>
+	</head>
+	<body>
+		<h1>Balla Milán</h1>
+        <h2>Balla Milán</h2>
+		<h3>Balla Milán</h3>
+		<h4>Balla Milán</h4>
+		<h5>Balla Milán</h5>
+		<h6>Balla Milán</h6>
+		<p>Ez itt a kollázsom</p>
+        <img src="https://github.com/Ballam906/kollazs/blob/main/koll%C3%A1zs.jpg?raw=true" alt="kollazs" title="kollazs" width=500>
+	</body>
 </html>
-
-
