--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<h4>Balla Milán</h4>
 		<h5>Balla Milán</h5>
 		<h6>Balla Milán</h6>
-		<p>Ez itt a kollázsom</p>
 		<a href="https://pepe1125.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>
+    <p>Ez itt a kollázsom:</p>
         <img src="https://github.com/Ballam906/kollazs/blob/main/koll%C3%A1zs.jpg?raw=true" alt="kollazs" title="kollazs" width=500>
 	</body>
 </html>
