--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Balla Milán</h1>
         <h2>Balla Milán</h2>
-		<h3>Balla Milán</h3>
+		<h3 style="color: blue;">Balla Milán</h3>
 		<h4>Balla Milán</h4>
 		<h5>Balla Milán</h5>
 		<h6>Balla Milán</h6>
