--- a/keplink.html
+++ b/keplink.html
@@ -6,7 +6,12 @@
 </head>
 
 <body>
-
+	<nav>
+		<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
+		<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
+		<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
+		<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
+	</nav>
 	<h1>Balla Milán</h1>
 	<p>Kép+link</p>
 	<a href="https://hu.wikipedia.org/wiki/%C3%89p%C3%BCletek_h%C5%91szigetel%C3%A9se">
