--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<title>BM oldala</title>
 	</head>
 	<body>
+		<nav>
+			<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
+			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
+			<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
+			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
+		</nav>
 		<h1>Balla Milán</h1>
         <h2>Balla Milán</h2>
 		<h3 style="color: blue;">Balla Milán</h3>
