--- a/orarend.html
+++ b/orarend.html
@@ -6,6 +6,12 @@
     <title>Órarend</title>
 </head>
 <body>
+    <nav>
+        <a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
+        <a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
+        <a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
+        <a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
+    </nav>
     <table border="2px" >
         <tr style="background-color: blanchedalmond;">
             <th>Óraszám</th>
