--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
+			<a style="background-color: cornflowerblue;" href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
