--- a/listak.html
+++ b/listak.html
@@ -8,7 +8,7 @@
         <nav>
 			<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
-			<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
+			<a style="background-color: cornflowerblue;" href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
 		</nav>
         <h1 style="color: royalblue;">Balla Milán</h1>
