--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
 			</style>
 	</head>
 	<body>
+		<div class="sidebar">
 		<nav>
 			<a class="active" href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
-		</nav>
+		</nav> </div>
+		<div class="content">
 		<h1>Balla Milán</h1>
         <h2>Balla Milán</h2>
 		<h3 style="color: blue;">Balla Milán</h3>
@@ -75,5 +77,6 @@
 		<a href="https://ballam906.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>
     <p>Ez itt a kollázsom:</p>
         <img src="https://github.com/Ballam906/kollazs/blob/main/koll%C3%A1zs.jpg?raw=true" alt="kollazs" title="kollazs" width=500>
+	</div>
 	</body>
 </html>
