--- a/listak.html
+++ b/listak.html
@@ -61,12 +61,14 @@
     </head>
 
     <body>
+        <div class="sidebar">
         <nav>
 			<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
 			<a class="active" href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
-		</nav>
+        </nav>
+        </div> <div class="content">
         <h1 style="color: royalblue;">Balla Milán</h1>
         <h2><u>Listák</u></h2>
 
@@ -82,6 +84,6 @@
             <li>Számítógépek szerelése</li>
             <li>Autószerelés</li>  
             </ul>
-
+        </div>
     </body>
 </html>
