--- a/orarend.html
+++ b/orarend.html
@@ -69,7 +69,7 @@
             <a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
             <a class="active" href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
         </nav>
-    </div>
+    </div> <div class="content">
     <table border="2px" >
         <tr style="background-color: blanchedalmond;">
             <th>Óraszám</th>
@@ -152,6 +152,7 @@
             <td></td>
             <td>Tesi</td>
         </tr>
-    </table>    
+    </table>  
+    </div>  
 </body>
 </html>
