--- a/keplink.html
+++ b/keplink.html
@@ -3,10 +3,13 @@
 
 <head>
 	<title>kép+link</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 	<style>
 		body {
 		  margin: 0;
-		  font-family: "Lato", sans-serif;
+		  font-family: 'Roboto Mono', monospace;
 		}
 		
 		.sidebar {
