--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 	<head>
 		<title>BM oldala</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 		<style>
 			body {
 			  margin: 0;
-			  font-family: "Lato", sans-serif;
+			  font-family: 'Roboto Mono', monospace;
+			  font-size: 20px;
 			}
 			
 			.sidebar {
