--- a/listak.html
+++ b/listak.html
@@ -2,10 +2,13 @@
 
     <head>
         <title>listak</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
         <style>
             body {
               margin: 0;
-              font-family: "Lato", sans-serif;
+              font-family: 'Bebas Neue', cursive;
             }
             
             .sidebar {
