--- a/evszakok.html
+++ b/evszakok.html
@@ -66,11 +66,11 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="https://ballam906.github.io/kollazs/index.html" target="blank">FŐOLDAL</a>|
-        <a href="https://ballam906.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>|
-        <a href="https://ballam906.github.io/kollazs/listak.html">LISTÁK</a> |
-        <a href="https://ballam906.github.io/kollazs/orarend.html" target="blank">ÓRAREND</a>|
-        <a href="https://ballam906.github.io/kollazs/evszakok.html" target="blank" class="active">ÉVSZAKOK</a>|
+        <a href="https://ballam906.github.io/kollazs/index.html" target="blank">Főoldal</a> |
+        <a href="https://ballam906.github.io/kollazs/keplink.html" target="blank">1.Feladat</a> |
+        <a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
+        <a href="https://ballam906.github.io/kollazs/orarend.html" target="blank">3.Feladat</a> |
+        <a href="https://ballam906.github.io/kollazs/evszakok.html" target="blank" class="active">4.Feladat</a> |
        </div>
         <div class="content">
         <div class="box2">
@@ -81,13 +81,13 @@
             <img src="spring.png" alt="tavasz" height="300px" width="300px">
             <p id="center">Tavasz</p>
         </div>
-            <div class="box2">
-                <img src="autumn1.png" alt="osz" height="300px" width="300px">
-                <p id="center">Ősz</p>
-            </div>
-            <div class="box2">
-                <img src="summer1.png" alt="nyar" height="300px" width="300px">
-                <p id="center">Nyár</p>
+        <div class="box2">
+           <img src="summer1.png" alt="nyar" height="300px" width="300px">
+            <p id="center">Nyár</p>
+        </div>
+        <div class="box2">
+            <img src="autumn1.png" alt="osz" height="300px" width="300px">
+            <p id="center">Ősz</p>
         </div>
     </div>
     
