--- a/listak.html
+++ b/listak.html
@@ -70,6 +70,7 @@
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
 			<a class="active" href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
+      <a href="https://ballam906.github.io/kollazs/evszakok.html" target="blank" class="active">4.Feladat</a> |
         </nav>
         </div> <div class="content">
         <h1 style="color: royalblue;">Balla Milán</h1>
