--- a/evszakok.html
+++ b/evszakok.html
@@ -83,11 +83,13 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="https://ballam906.github.io/kollazs/index.html" target="blank">Főoldal</a> |
-        <a href="https://ballam906.github.io/kollazs/keplink.html" target="blank">1.Feladat</a> |
-        <a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
-        <a href="https://ballam906.github.io/kollazs/orarend.html" target="blank">3.Feladat</a> |
-        <a href="https://ballam906.github.io/kollazs/evszakok.html" target="blank" class="active">4.Feladat</a> |
+        <a href="https://ballam906.github.io/kollazs/index.html" target="blank">Főoldal</a>
+        <a href="https://ballam906.github.io/kollazs/keplink.html" target="blank">1.Feladat</a>
+        <a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a>
+        <a href="https://ballam906.github.io/kollazs/orarend.html" target="blank">3.Feladat</a>
+        <a href="https://ballam906.github.io/kollazs/evszakok.html" target="blank" class="active">4.Feladat</a>
+        <a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
+
        </div>
         <div class="content">
         <div class="box2">
