--- a/keplink.html
+++ b/keplink.html
@@ -84,11 +84,12 @@
 <body>
 	<div class="sidebar">
 	<nav>
-		<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a> |
-		<a class="active" href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a> |
-		<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a> |
-		<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a> |
-		<a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a> |
+		<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a>
+		<a class="active" href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a>
+		<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a>
+		<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a>
+		<a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
+		<a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
 	</nav>
 	</div> <div class="content">
 	<h1>Balla Milán</h1>
