--- a/urlap.html
+++ b/urlap.html
@@ -18,7 +18,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-        <title>listak</title>
+        <title>urlap</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
@@ -85,27 +85,43 @@
         <nav>
 			<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a>
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a>
-			<a class="active" href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a>
+			<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a>
-      <a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
-      <a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
+            <a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
+            <a class="active" href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
         </nav>
         </div> <div class="content">
-        <h1 style="color: royalblue;">Balla Milán</h1>
-        <h2><u>Listák</u></h2>
-
-            <p style="background-color:turquoise;">Kedvenc tantárgyaim:</p>
-            <ol>
-            <li>Informatika</li>
-            <li>Informatika</li>
-            <li>Informatika</li>
-            </ol>
-
-            <p style="background-color: yellowgreen;">Kedvenc hobbijaim:</p>
-            <ul>
-            <li>Számítógépek szerelése</li>
-            <li>Autószerelés</li>  
-            </ul>
+            <h1>Videókártya rendelés</h1>
+            <h2>Kérjük töltsön ki minden mezőt.</h2>
+            <h3>Elérhetősége:</h3>
+            <p>Adja meg az email címét:</p>
+            <input type='email'>
+            <p>Telefonszáma:</p>
+            <input type='tel'>
+            <p>Lakcíme:</p>
+            <input type='text'>
+            <h3>Rendelési információk:</h3>
+            <p>Videókártya:</p>
+            <select>
+                <option>---Válasszon--- </option>
+                <option>AMD RX 550 4 GB GDDR5       </option>
+                <option>AMD RX 560 4 GB GDDR5       </option>
+                <option>AMD RX 570 4 GB             </option>
+                <option>AMD RX 570 8 GB             </option>
+                <option>AMD RX 580 4 GB             </option>
+                <option>AMD RX 580 8 GB             </option>
+                <option>AMD RX 590 8 GB             </option>
+                <option>NVIDIA GTX 1050 2 GB        </option>
+                <option>NVIDIA GTX 1050 Ti 4 GB     </option>
+                <option>NVIDIA GTX 1060 3 GB        </option>
+                <option>NVIDIA GTX 1060 6 GB        </option>
+                <option>NVIDIA GTX 1650 4 GB        </option>
+                <option>NVIDIA GTX 1070 8 GB        </option>
+            </select>
+            <p>Mennyit szeretne belőle?</p>
+            <input type='number'>
+            <br>
+            <input type='submit'>
         </div>
     </body>
 </html>
