--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
 		<style>
+			footer {
+ 			position: fixed;
+ 		  	left: 0;
+		   	bottom: 0;
+		   	width: 100%;
+		   	background-color: red;
+			color: white;
+  			text-align: center;
+			}
 			body {
 			  margin: 0;
 			  font-family: 'Roboto Mono', monospace;
@@ -100,6 +109,9 @@
 		<a href="https://ballam906.github.io/kollazs/keplink.html" target="blank">KÉPLINK</a>
     <p>Ez itt a kollázsom:</p>
         <img src="https://github.com/Ballam906/kollazs/blob/main/koll%C3%A1zs.jpg?raw=true" alt="kollazs" title="kollazs" width=500>
+	</div>
+	<div class="footer">
+ 	<p>Milán - ballam@kkszki.hu</p>
 	</div>
 	</body>
 </html>
