--- a/orarend.html
+++ b/orarend.html
@@ -22,6 +22,15 @@
 <meta name="theme-color" content="#ffffff">
     <title>Órarend</title>
     <style>
+        footer {
+ 			position: fixed;
+ 		  	left: 0;
+		   	bottom: 0;
+		   	width: 100%;
+		   	background-color: red;
+			color: white;
+  			text-align: center;
+			}
         body {
           margin: 0;
           font-family: "Lato", sans-serif;
@@ -173,5 +182,8 @@
         </tr>
     </table>  
     </div>  
+    <div class="footer">
+  <p>Milán - ballam@kkszki.hu</p>
+</div>
 </body>
 </html>
