--- a/urlap.html
+++ b/urlap.html
@@ -23,6 +23,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
         <style>
+		footer {
+ 			position: fixed;
+ 		  	left: 0;
+		   	bottom: 0;
+		   	width: 100%;
+		   	background-color: red;
+			color: white;
+  			text-align: center;
+			}
             body {
               margin: 0;
               font-family: 'Bebas Neue', cursive;
@@ -123,5 +132,9 @@
             <br>
             <input type='submit'>
         </div>
+	    
+<div class="footer">
+  <p>Milán - ballam@kkszki.hu</p>
+</div>
     </body>
 </html>
