--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
+			<a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
 		</nav> </div>
 		<div class="content">
 		<h1>Balla Milán</h1>
