--- a/orarend.html
+++ b/orarend.html
@@ -96,6 +96,7 @@
             <a class="active" href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a>
             <a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
             <a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
+		<a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
         </nav>
     </div> <div class="content">
     <table border="2px" >
