--- a/tablazat.html
+++ b/tablazat.html
@@ -90,7 +90,8 @@
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
-            <a class="active" href="https://ballam906.github.io/kollazs/tablazat.html">5.Feladat</a>
+            <a class="active" href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
+		<a href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
             
             </div>
           <div class="content">
