--- a/pita.html
+++ b/pita.html
@@ -92,13 +92,14 @@
 <body>
     <div class="sidebar">
 		<nav>
-			<a class="active" href="https://ballam906.github.io/kollazs/index.html">Főoldal</a>
+			<a href="https://ballam906.github.io/kollazs/index.html">Főoldal</a>
 			<a href="https://ballam906.github.io/kollazs/keplink.html">1.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/listak.html">2.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/orarend.html">3.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
 			<a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
             <a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
+			<a class="active" href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
 		</nav>
     <img src="pita.png">
     <input type="number" id="a" placeholder="A"></input>
