--- a/pita.html
+++ b/pita.html
@@ -100,7 +100,7 @@
 			<a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
             <a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
 			<a class="active" href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
-		</nav>
+	    </nav></div><div class="content">
     <img src="pita.png">
     <input type="number" id="a" placeholder="A"></input>
     <input type="number" id="b" placeholder="B"></input>
@@ -114,6 +114,7 @@
             c=Math.sqrt(a*a+b*b)
         }
     </script>
+	</div>
     <div class="footer">
  	<p>Milán - ballam@kkszki.hu</p>
 	</div>
