--- a/evszakok.html
+++ b/evszakok.html
@@ -89,7 +89,9 @@
         <a href="https://ballam906.github.io/kollazs/orarend.html" target="blank">3.Feladat</a>
         <a href="https://ballam906.github.io/kollazs/evszakok.html" target="blank" class="active">4.Feladat</a>
         <a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
-
+        <a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
+        <a href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
+        <a href="https://ballam906.github.io/kollazs/bootstrap.html">8.Feladat</a>
        </div>
         <div class="content">
         <div class="box2">
