--- a/pita.html
+++ b/pita.html
@@ -100,6 +100,7 @@
 			<a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
             <a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
 			<a class="active" href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
+			<a href="https://ballam906.github.io/kollazs/bootstrap.html">8.Feladat</a>
 	    </nav></div><div class="content">
     <img src="pita.png">
     <input type="number" id="a" placeholder="A"></input>
