--- a/orarend.html
+++ b/orarend.html
@@ -97,7 +97,8 @@
             <a href="https://ballam906.github.io/kollazs/evszakok.html">4.Feladat</a>
             <a href="https://ballam906.github.io/kollazs/urlap.html">5.Feladat</a>
 		<a href="https://ballam906.github.io/kollazs/tablazat.html">6.Feladat</a>
-		<a href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
+    <a href="https://ballam906.github.io/kollazs/pita.html">7.Feladat</a>
+    <a href="https://ballam906.github.io/kollazs/bootstrap.html">8.Feladat</a>
         </nav>
     </div> <div class="content">
     <table border="2px" >
